{
    "name": "Input Mapping",
    "maps": [
        {
            "name": "WASD + Arrows",
            "id": "7bd83120-7d3a-4308-ac88-900fe35187f6",
            "actions": [
                {
                    "name": "ThrottleUp",
                    "type": "Button",
                    "id": "29e56f6c-3889-43d6-8c1f-58bc4e8e99b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrottleDown",
                    "type": "Button",
                    "id": "81c5f2c4-49a9-4fa7-a3b9-43852df2eefe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "YawLeft",
                    "type": "Button",
                    "id": "a8794b04-1dbf-47ac-8615-c3f3c2fd458d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "YawRight",
                    "type": "Button",
                    "id": "6673047f-2985-4b8a-acc5-58529452d7f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ForwardTilt",
                    "type": "Button",
                    "id": "20c3bc30-4d99-4a7b-b3b5-110378165343",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BackwardTilt",
                    "type": "Button",
                    "id": "30f274e8-3e24-40d5-af2e-d938ce7bdc6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftRoll",
                    "type": "Button",
                    "id": "357dbb54-a1cd-447d-93f7-677eca336b6c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightRoll",
                    "type": "Button",
                    "id": "c0a4c291-65ae-4d89-a411-adc4a9f44d17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "38ea1ba3-8b15-4c27-8760-b87c438b1602",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8c1d540-85de-4ae5-b744-cea38da408f7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "889253e3-852a-49de-97ca-63f0b5374261",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YawLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "691419f8-3a2d-469e-baa6-13adf530da1e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackwardTilt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db277b18-186c-4ac4-97a1-bdfe006ebb68",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardTilt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae3a1ac1-e7a6-4aaf-ae29-fe766b953070",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YawRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac52cb4e-7a19-480f-a139-e9bfa9a019a4",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d1a36bd-f93f-4822-b7c1-c92af6ed0af4",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "WASD + Mouse",
            "id": "87286a30-ae3c-4774-992c-98e2100ae91e",
            "actions": [
                {
                    "name": "ThrottleUp",
                    "type": "Button",
                    "id": "d40aa272-74dd-49a0-a667-f6d8566bfdf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrottleDown",
                    "type": "Button",
                    "id": "bcf64656-8a07-4f83-a7aa-828162313509",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "YawLeft",
                    "type": "Button",
                    "id": "f76d826c-50fe-423d-8a24-4c7070686dd5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "YawRight",
                    "type": "Button",
                    "id": "db90b90c-80a1-4d5d-80a4-93ffa2cc1dfe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ForwardTilt",
                    "type": "Button",
                    "id": "fd02c233-7179-48e0-8ec5-22847d26a9dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BackwardTilt",
                    "type": "Button",
                    "id": "791140da-a3f8-4471-a084-5ad302340ad8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftRoll",
                    "type": "Button",
                    "id": "35aa67c7-1c0a-413f-9709-ab6564be26f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightRoll",
                    "type": "Button",
                    "id": "b5ab8d01-2d6f-422c-91ee-a566ec7f4212",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae18f67c-49ee-4cef-a53d-fabbb26b0b4e",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a19c0974-8f5d-4852-bd18-9f10cf48d6a2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d596245f-1f55-48f8-b34a-9a35c1496510",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YawLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ed27022-3b66-4c78-88f7-08eabbdd3e42",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackwardTilt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec93d223-5f81-41fb-8502-5dde22eeee90",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardTilt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c1467ce-a6b9-4206-90ee-da400984bfa6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YawRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "573cf06d-50b7-4dad-a824-588305f20477",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7304047-342f-4085-9305-ceefe742d535",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}